# LightShot-Screenshots-Downloader

./: .gitignore  README.md  downloadable_urls.txt  env.py  existingList.txt  main.py  methods.py  non_downloadable_urls.txt  nonexistinglist.txt  params.yaml  program.py  pyproject.toml  startup.sh
